SIP-4452: Fixed a layout issue.

--- a/saw-web/src/themes/base/app/_layout.scss
+++ b/saw-web/src/themes/base/app/_layout.scss
@@ -96,6 +96,5 @@ $header-bar-height: 64px;
 
 .render-content {
   width: 100%;
-  height: 100%;
   overflow-y: auto;
 }
